@@ -1,3 +1,11 @@
+2018-02-11 Satya Panuganti <prakashsatya10@gmail.com>
+
+-Added FOCUSS solver.
+ Also made it possible to choose between different pursuit algorithms by
+ the sparse inpaint class in code/algos/
+
+/************************************************************************/
+
 2018-02-10 Satya Panuganti <prakashsatya10@gmail.com>
 
 -Fixed bug
